--- a/Documents/NetBeansProjects/ManajemenMasjid/src/view/Pengurus.form
+++ b/Documents/NetBeansProjects/ManajemenMasjid/src/view/Pengurus.form
@@ -190,17 +190,15 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jlDaftarPengurus" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jlDaftarInventaris" alignment="1" max="32767" attributes="0"/>
                           <Component id="jlInventaris" alignment="1" max="32767" attributes="0"/>
                           <Component id="jLabel8" alignment="1" max="32767" attributes="0"/>
                           <Component id="jlProfileMasjid" alignment="1" max="32767" attributes="0"/>
+                          <Component id="jlKeluar" alignment="1" max="32767" attributes="0"/>
                           <Component id="jlTambahPengurus" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jlDetailKeuangan" alignment="1" max="32767" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jlKeuangan" min="-2" pref="247" max="-2" attributes="0"/>
@@ -208,20 +206,19 @@
                                       <Component id="jLabel21" min="-2" pref="26" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jlKepengurusan" min="-2" pref="247" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jLabel19" min="-2" pref="26" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
                                       <Component id="jlInformasiMasjid" min="-2" pref="247" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="jLabel20" min="-2" pref="26" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jlTambahKeuangan" alignment="0" min="-2" pref="166" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="jlKepengurusan" min="-2" pref="247" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="jLabel19" min="-2" pref="26" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jlKeluar" alignment="1" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -240,16 +237,12 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jlInventaris" min="-2" pref="34" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jlDaftarInventaris" min="-2" pref="34" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jlKepengurusan" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                           <Component id="jLabel19" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jlTambahPengurus" min="-2" pref="34" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jlDaftarPengurus" min="-2" pref="34" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jlKeuangan" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
@@ -258,10 +251,8 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jlTambahKeuangan" min="-2" pref="34" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jlDetailKeuangan" min="-2" pref="34" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jlKeluar" min="-2" pref="34" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="131" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -306,17 +297,6 @@
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlProfileMasjidMouseClicked"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JLabel" name="jlDaftarInventaris">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Times New Roman" size="14" style="0"/>
-                </Property>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="       Daftar Inventaris"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JLabel" name="jlInventaris">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -343,28 +323,6 @@
                   <Image iconType="3" name="/img/icons8_moon_star_24px.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Informasi Masjid"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="jlDaftarPengurus">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Times New Roman" size="14" style="0"/>
-                </Property>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="       Daftar Pengurus"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="jlDetailKeuangan">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Times New Roman" size="14" style="0"/>
-                </Property>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="       Detail Keuangan"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jlKepengurusan">
@@ -405,6 +363,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="       Tambah Keuangan"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlTambahKeuanganMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel19">
               <Properties>
@@ -589,9 +550,9 @@
                                   <Component id="tfIdPengurus" alignment="1" min="-2" pref="89" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="btnReset1" min="-2" pref="113" max="-2" attributes="0"/>
+                              <Component id="btnDelete" min="-2" pref="113" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btnSimpan1" min="-2" pref="113" max="-2" attributes="0"/>
+                              <Component id="btnUpdate" min="-2" pref="113" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnReset" min="-2" pref="113" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -673,8 +634,8 @@
                           </Group>
                           <Component id="btnReset" alignment="1" min="-2" pref="36" max="-2" attributes="0"/>
                           <Component id="btnSimpan" alignment="1" min="-2" pref="36" max="-2" attributes="0"/>
-                          <Component id="btnReset1" alignment="1" min="-2" pref="36" max="-2" attributes="0"/>
-                          <Component id="btnSimpan1" alignment="1" min="-2" pref="36" max="-2" attributes="0"/>
+                          <Component id="btnDelete" alignment="1" min="-2" pref="36" max="-2" attributes="0"/>
+                          <Component id="btnUpdate" alignment="1" min="-2" pref="36" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="115" max="-2" attributes="0"/>
@@ -878,7 +839,7 @@
                 <Property name="text" type="java.lang.String" value="Tanggal Lahir"/>
               </Properties>
             </Component>
-            <Component class="java.awt.Button" name="btnReset1">
+            <Component class="java.awt.Button" name="btnDelete">
               <Properties>
                 <Property name="actionCommand" type="java.lang.String" value="Registrasi"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -893,10 +854,10 @@
                 <Property name="label" type="java.lang.String" value="Delete"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnReset1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeleteActionPerformed"/>
               </Events>
             </Component>
-            <Component class="java.awt.Button" name="btnSimpan1">
+            <Component class="java.awt.Button" name="btnUpdate">
               <Properties>
                 <Property name="actionCommand" type="java.lang.String" value="Registrasi"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -911,7 +872,7 @@
                 <Property name="label" type="java.lang.String" value="Update"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSimpan1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="tfIdPengurus">
